fix(layout): Fixed few layout issues

--- a/styles/less/layouts.less
+++ b/styles/less/layouts.less
@@ -248,7 +248,7 @@ a:hover {
         }
         > .content {
             overflow: auto;
-            right: @sidepreview-width;
+            right: @sidepreview-width + 160;
             @media only screen and (max-width : 1430px) {
                 right: @sidepreview-width - 40;
             }
